--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,2 @@
 <h1>{{ title }}</h1>
-<h3>{{ countAuthors }} Authors</h3>
-<ul>
-  <li *ngFor="let author of authors">
-    {{ author }}
-  </li>
-</ul>
+<authors></authors>
